2010-07-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/main.c,
	  support/regression/tests/float_single.c:
	  Fixed #3027961.

2010-07-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed #3027961.

2010-07-25 Borut Razem <borut.razem AT siol.net>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCC.y, src/SDCC.lex,
	  src/SDCCast.c, src/SDCCast.h, device/include/stddef.h,
	  device/include/pic16/stddef.h, support/regression/tests/zeropad.c,
	  support/regression/tests/offsetof.c:
	  applied patch #2801126: __builtin_offsetof implementation,
	  thanks to Robert Larice
	* support/regression/ports/pic16/spec.mk,
	  support/regression/ports/pic16/support.c:
	  _asm and _endasm changed to __asm and __endasm, reentrant changed to __reentrant
	* device/include/pic16/stdlib.h: added declarations of abs() and labs()

2010-07-24 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/libm/*, device/lib/pic16/libio/adc/*,
	  device/lib/pic16/libio/i2c/*, device/lib/pic16/libio/usart/*,
	  device/lib/pic16/libsdcc/long/*,
	  device/lib/pic16/libsdcc/fixed16x16/*,
	  device/lib/pic16/libsdcc/stack/*, device/lib/pic16/libsdcc/lregs/*,
	  device/lib/pic16/libsdcc/char/*:
	  sdcc library license changed to GPL+LE

2010-07-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c,
	* src/SDCCicode.c: cosmetic changes
	* src/mcs51/gen.c (genPointerGet, genPointerSet),
	* src/SDCCglue.c (aopLiteralLong),
	* src/SDCCsymt.c (computeType),
	* src/SDCCval.c (valPlus),
	* src/z80/ralloc.c (serialRegAssign, packRegisters): fixed bug 3027957
	* support/regression/tests/bug3027957.c: new, added
	* support/regression/fwk/include/testfwk.h: removed flaky NULL definition
	* support/regression/tests/absolute.c,
	* support/regression/tests/bug-2982135.c,
	* support/regression/tests/bug-524691.c,
	* support/regression/tests/bug1496419.c,
	* support/regression/tests/bug2817646.c,
	* support/regression/tests/driverstruct.c: include <stddef.h> for NULL
